--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,21 +9,23 @@ on:
   pull_request:
     branches: [ "main" ]
 
-pages:
-  stage: deploy
-  cache:
-    key:
-      files:
-        - package-lock.json
-      prefix: npm
-    paths:
-      - node_modules/
-  script:
-    - npm install
-    - npm run build
-    - cp -a dist/. public/
-  artifacts:
-    paths:
-      - public
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+jobs:
+  pages:
+    stage: deploy
+    cache:
+      key:
+        files:
+          - package-lock.json
+        prefix: npm
+      paths:
+        - node_modules/
+    script:
+      - npm install
+      - npm run build
+      - cp -a dist/. public/
+    artifacts:
+      paths:
+        - public
+    rules:
+      - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  
