--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview --host"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "onsenui": "^2.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
